@@ -1,3 +1,8 @@
+2005-05-30  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* library/console.tcl (::tk::ConsoleInit): print out first prompt
+	and swallow the extra "% " that comes once from Tcl on Windows.
+
 2005-05-29  Daniel Steffen  <das@users.sourceforge.net>
 
 	* macosx/Wish.pbproj/project.pbxproj: added missing FRAMEWORK defines
